cfail/ui/linked_list_gt_one.stderr
error[E0080]: evaluation of `heapless::sorted_linked_list::SortedLinkedListInner::<u8, heapless::sorted_linked_list::LinkedIndexU8, heapless::sorted_linked_list::Max, heapless::sorted_linked_list::storage::SortedLinkedListStorageInner<[heapless::sorted_linked_list::Node<u8, heapless::sorted_linked_list::LinkedIndexU8>; 256]>>::new_u8::{constant#0}` failed
 --> $HEAPLESS/src/sorted_linked_list.rs
  |
  | impl_index_and_const_new!(LinkedIndexU8, u8, new_u8, { u8::MAX as usize - 1 });
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'SortedLinkedList size must be less than the index maximum', /home/alex/git/heapless/src/sorted_linked_list.rs:275:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `impl_index_and_const_new` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
   --> $HEAPLESS/src/sorted_linked_list.rs
    |
    | impl_index_and_const_new!(LinkedIndexU8, u8, new_u8, { u8::MAX as usize - 1 });
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: this note originates in the macro `impl_index_and_const_new` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn heapless::sorted_linked_list::SortedLinkedListInner::<u8, heapless::sorted_linked_list::LinkedIndexU8, heapless::sorted_linked_list::Max, heapless::sorted_linked_list::storage::SortedLinkedListStorageInner<[heapless::sorted_linked_list::Node<u8, heapless::sorted_linked_list::LinkedIndexU8>; 256]>>::new_u8`
 --> ui/linked_list_gt_one.rs:4:60
  |
4 |     let _: SortedLinkedList<u8, LinkedIndexU8, Max, 256> = SortedLinkedList::new_u8();
  |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^
